Regression: AX: image labels no longer exposed to AX API in SVG test case https://bugs.webkit.org/show_bug.cgi?id=131208

Reviewed by Daniel Bates.

Source/WebCore:

accessibleNameForNode should work on any Element, not just HTML elements.

Test: accessibility/svg-labelledby.html

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::accessibleNameForNode):

LayoutTests:

* accessibility/svg-labelledby-expected.txt: Added.
* accessibility/svg-labelledby.html: Added.



Canonical link: https://commits.webkit.org/149402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166917 268f45cc-cd09-0410-ab3c-d52691b4dbfc